--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <style>html,body{margin:0;height:100%} .wrap{height:100%}</style>
+    <style>
+      html,body{margin:0;height:100%;background:#1a1a1a;color:#fff;font-family:system-ui}
+      .wrap{height:100%;display:flex;align-items:center;justify-content:center}
+      .loading{text-align:center}
+    </style>
   </head>
   <body>
     <div class="wrap">
-      <a class="twitter-timeline"
-         data-theme="dark"
-         data-chrome="noheader nofooter noborders transparent"
-         href="https://x.com/i/lists/1967938643252609333">
-        Tweets from my List
-      </a>
-      <script async src="https://platform.twitter.com/widgets.js"></script>
+      <div class="loading">
+        <p>Loading X timeline...</p>
+        <a class="twitter-timeline"
+           data-theme="dark"
+           data-chrome="noheader nofooter noborders transparent"
+           data-height="400"
+           href="https://twitter.com/i/lists/1967938643252609333">
+          Tweets from my List
+        </a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
     </div>
   </body>
 </html>
