--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
            data-chrome="noheader nofooter noborders transparent"
            data-height="400"
            href="https://twitter.com/i/lists/1967938643252609333">
-          Tweets from my List 2
+          Tweets from my List
         </a>
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
